--- a/program.html
+++ b/program.html
@@ -67,7 +67,8 @@
 
         <img class="cover" src="googlehax.jpg" alt="UBC Sauder and Google Hackathon" />
 
-        <div class="chips">
+        <!-- ✅ limited chips (max 2 lines) -->
+        <div class="chips chips--limit">
           <span class="chip">YouTube Analytics API</span>
           <span class="chip">OAuth</span>
           <span class="chip">YouTube Data API v3</span>
@@ -77,6 +78,7 @@
         </div>
 
         <div class="prose">
+          <h3>What we did</h3>
           <p>
             We successfully integrated the YouTube Analytics API to retrieve key metrics such as views, subscriber growth,
             audience distribution, and traffic sources, while resolving OAuth authentication challenges to ensure secure data access.
@@ -89,6 +91,8 @@
             Additionally, we integrated Looker Studio to create real-time dashboards for visualizing YouTube performance, enhancing insights
             through interactive and data-driven reporting.
           </p>
+
+          <h3>What’s next</h3>
           <p>
             Moving forward, we aim to refine our ML models, automate data collection, and build an intelligent analytics system that seamlessly
             combines API data, predictive modeling, and visualization for optimized YouTube growth strategies.
@@ -96,7 +100,8 @@
         </div>
 
         <div class="actions">
-          <a class="btn ghost" href="https://jjzhao08200.github.io/Journey-to-the-west/index.html" target="_blank" rel="noopener">
+          <!-- ✅ primary CTA -->
+          <a class="btn primary" href="https://jjzhao08200.github.io/Journey-to-the-west/index.html" target="_blank" rel="noopener">
             View Demo
           </a>
           <span class="note">(You can type anything for username and password)</span>
